Changelog for Collage

    (name of developer listed in brackets)

* Added content views for ATLink and ATFile
  [zegor]

* Fixed some i18n problems
  Added English and French po files
  Resynchronized po files with pot
  [zegor]

* Removed share action in types (two share tab with Plone 3.0)
  [zegor]

* Added .metadata to cache icons
  [zegor]

* Refactored codebase
    Moved code out of ./browser/browser.py into separate files.

    New directory structure:

    ./browser/viewlets     viewlet templates
    ./browser/views        content view templates
    ./browser/templates    collage ui templates

    Zope 3 configuration files:

    configuration.zcml     collage ui and functionality
    views.zcml             content views
    actions.zcml           ui actions (insert, split etc.)
    viewlets.zcml          ui configuration
    
    [malthe]
    
* Nested headings properly
    Lets have a 'safe' structure:    
    <h1> title of the collage
    <h2> could be a row heading and / or object item
    http://www.w3.org/TR/1999/WAI-WEBCONTENT-19990505/#tech-logical-headings

    [pelle]
    

* Added HISTORY file
    Lets use this file again to log changes...

    [pelle]